# dory

./: README.md  pyproject.toml
configs/: a3b.yaml
scripts/: install.sh
src/dory/: dory.py
