[project]
name = "dory"
version = "0.1.0"
description = "playing with nemo"
readme = "README.md"
authors = [
    { name = "k", email = "keatone@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "megatron-bridge",
    "transformer-engine[pytorch]"
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
no-build-isolation-package = ["transformer-engine"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true