[project]
name = "dory"
version = "0.1.0"
description = "playing with nemo"
readme = "README.md"
authors = [
    { name = "k", email = "keatone@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.7.1",
    "nemo-automodel[moe]",
    "flash-attn==2.7.4.post1",
    "nv-grouped-gemm",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform != 'darwin'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
]
nemo-automodel = [{ git = "https://github.com/NVIDIA-NeMo/Automodel.git", rev = "f06e8b5" }]
nv-grouped-gemm = [{ git = "https://github.com/fanshiqing/grouped_gemm.git", rev = "0813748" }]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true